TAMAYA-39 Writing tests is not enough. You must execute them too.